--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,9 @@
     <%= render "shared/nav" %>
 
     <!-- メイン -->
-    <main class="mx-auto max-w-6xl px-4 md:px-6 lg:px-8 py-6">
+    <main class="<%= content_for?(:page_container_class) \
+                    ? yield(:page_container_class) \
+                    : 'mx-auto max-w-6xl px-4 md:px-6 lg:px-8 py-6' %>">
       <%= render "shared/flash" %>
       <%= yield %>
     </main>
