--- a/app/views/used_codes/create.turbo_stream.erb
+++ b/app/views/used_codes/create.turbo_stream.erb
@@ -4,3 +4,7 @@
         pre_code: @pre_code,
         current_like: current_user.likes.find_by(pre_code_id: @pre_code.id) %>
 <% end %>
+
+<%= turbo_stream.replace dom_id(@pre_code, :metrics) do %>
+  <%= render "code_libraries/metrics", pre_code: @pre_code %>
+<% end %>
