レスポンシブ最適化：ヘッダータイトルの中央寄せ＆メニュー右寄せ／Booksセクションの改行制御／問い合わせフォームの縦横サイズ調整

--- a/app/views/book_sections/show.html.erb
+++ b/app/views/book_sections/show.html.erb
@@ -13,7 +13,7 @@
     <%= @section.heading %>
   </h1>
 
-  <article class="content-body prose">
+  <article class="content-body prose break-all md:break-words">
     <%= render_section_content(@section) %>
   </article>
 
