--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -5,7 +5,7 @@
 <%= render "shared/breadcrumbs" %>
 
 <% content_for :title, "お問い合わせ" %>
-<h1 class="text-2xl font-bold mb-4">お問い合わせ</h1>
+<h1 class="mx-auto max-w-3xl text-2xl font-bold mb-4">お問い合わせ</h1>
 
 <div class="mx-auto max-w-3xl bg-white rounded-xl shadow p-4 overflow-hidden">
   <iframe
