認証基盤をauthentications基準に移行しprovider分岐を撤去＋emailグローバル一意インデックス追加

--- a/app/views/code_libraries/show.html.erb
+++ b/app/views/code_libraries/show.html.erb
@@ -54,7 +54,7 @@
                               redirect: editor_path(pre_code_id: @pre_code.id)),
               method: :post,
               form: { data: { turbo: false } },
-              class: "inline-flex justify-center w-64 md:w-80 lg:w-96
+              class: "inline-flex justify-center w-50 sm:w-64 md:w-80 lg:w-96
                       bg-[#CC0000] text-white px-4 py-2 rounded
                       hover:bg-[#BB0000] active:bg-[#AA0000]" %>
       </div>
