管理画面にユーザー管理機能を追加（検索・編集者切替・凍結・削除対応）

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -35,6 +35,7 @@
           <%= link_to "Dashboard", admin_root_path %>
           <%= link_to "Books",     admin_books_path %>
           <%= link_to "Sections",  admin_book_sections_path %>
+          <%= link_to "Users",     admin_users_path %>
 
           <% if current_user&.admin? %>
             <%= button_to "Logout",
