管理画面にPreCode管理を追加（検索/ソート/詳細/編集/削除・50件ページング対応）

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -36,6 +36,7 @@
           <%= link_to "Books",     admin_books_path %>
           <%= link_to "Sections",  admin_book_sections_path %>
           <%= link_to "Users",     admin_users_path %>
+          <%= link_to "PreCode管理",     admin_pre_codes_path %>
 
           <% if current_user&.admin? %>
             <%= button_to "Logout",
